[package]
name = "handle"
authors = ["fa_555 <fa_555@foxmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.149"
base64 = "0.22.1"
lazy_static = "1.5.0"
rand = "0.10.0"
uuid = { version = "1.21.0", features = ["v4"] }
